# terrasynth

./: .gitignore  Cargo.toml
astro_lib/: Cargo.toml
astro_lib/src/: atmosphere.rs  binary.rs  error.rs  flora.rs  habitability.rs  lib.rs  moon.rs  orbit.rs  planet.rs  star.rs
astro_web/: Cargo.toml  Trunk.toml  index.html  style.css
astro_web/locales/: en.json  ru.json
astro_web/src/: main.rs
astro_web/src/components/: compare.rs  mod.rs  moon_tab.rs  planet_tab.rs  star_tab.rs  storage.rs  tab_bar.rs  ui.rs
